# Finance-Guru

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLAUDE.src.md  LICENSE  PRIVACY.md  README.md  justfile  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.sh
.beads/: issues.jsonl
.beads/specs/: family-office-bg0-spec.md
.claude/: settings.json
.claude/agents/: fg-builder.md  fg-compliance-officer.md  fg-dividend-specialist.md  fg-finance-orchestrator.md  fg-margin-specialist.md  fg-market-researcher.md  fg-onboarding-specialist.md  fg-qa-advisor.md  fg-quant-analyst.md  fg-strategy-advisor.md  fg-teaching-specialist.md
.claude/hooks/: CONFIG.md  README.md  load-fin-core-config.ts  run-tests.sh
.claude/skills/: skill-rules.json
.claude/tools/: python-tools.md
.dev/: CLAUDE.md  notes..txt  notes.md
.dev/meeting-notes/: 2026-01-30-paycheck-to-portfolio-sean-review.md
.devcontainer/: README.md
.github/: CODEOWNERS  dependabot.yml  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  (+1 more)
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
buy_ticket_agent/: __init__.py  config.py  guardrails.py  main.py  notifier.py  pipeline.py  secrets.py  state.py  ticket_generator.py  ticket_models.py
config/: snaptrade-accounts.example.yaml
docs/: CONTRIBUTING.md  MANUAL_TEST_CHECKLIST.md  SETUP.md  TROUBLESHOOTING.md  VISION.md  guru.md  hooks.md  index.md  onboarding-flow-evaluation.md  required-csv-uploads.md
fin-guru/: DISTRIBUTION-PLAN.md  README.md  config.yaml
finance-guru-desktop/: CLAUDE.md  README.md  index.html  main.js  package.json  preload.js  renderer.js
monitoring/: alerts.yml
scripts/: generate_buy_tickets.py  guru  run_monthly_refresh.sh  sim_drip_price_margin.py  sim_income_break_even.py
specs/: agent-itc-integration-compliance.md  finance-guru-user-onboarding-and-public-release.md
src/: CLAUDE.md  __init__.py  config.py
tests/: conftest.py  test_guardrails.py  test_pipeline.py  test_ticket_generator.py
(+488 files in other folders)
