[project]
name = "family-office"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "AGPL-3.0-or-later"}
dependencies = [
    "beautifulsoup4>=4.13.5",
    "matplotlib>=3.10.8",
    "numpy>=2.3.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "protobuf>=6.33.5",
    "plotly>=6.3.0",
    "pydantic>=2.10.6",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.3",
    "reportlab>=4.4.5",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "streamlit>=1.50.0",
    "textual>=6.6.0",
    "urllib3>=2.6.3",
    "xlsxwriter>=3.2.9",
    "yfinance>=0.2.66",
    "questionary>=2.1.1",
]

[dependency-groups]
dev = [
    "ruff>=0.12.0",
    "mypy>=1.13.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
pythonpath = ["."]
markers = [
    "integration: marks tests as integration tests (require real API keys)",
]

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = [".venv", "build", "dist", "node_modules", ".claude/hooks", ".eggs", "__pypackages__"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W", "B", "SIM", "C90", "N", "D"]
fixable = ["I", "F401", "UP", "W", "D", "SIM", "F541", "F841", "E"]
unfixable = ["B"]
ignore = ["E501", "E402", "D107", "D205", "D100", "B028"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "S101", "B011"]
"*_cli.py" = ["D"]
"__init__.py" = ["F401", "D104"]
"scripts/**/*.py" = ["D"]
".agents/**/*.py" = ["D"]
".claude/**/*.py" = ["D"]
"src/analysis/**/*.py" = ["N803", "N806"]
"src/strategies/**/*.py" = ["N803", "N806"]
"src/utils/**/*.py" = ["N803", "N806"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
